<resources>
    <string name="app_name">MaterialDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="story_1">\u3000\u3000我的祖父叫胡国华，胡家祖上是十里八乡有名的大地主，最辉煌的时期在城里买了三条胡同相连的四十多间宅子，其间也曾出过一些当官的和经商的，捐过前清的粮台、槽运的帮办。</string>
    <string name="story_2">\u3000\u3000民谚有云：“富不过三代。”这话是非常有道理的，家里纵然有金山银山，也架不住败家子孙的挥霍。</string>
    <string name="story_3">\u3000\u3000到了民国年间，传到我祖父这一代就开始家道中落了，先是分了家，胡国华也分到了不少家产，足够衣食无忧的过一辈子，可是他偏偏不肯学好，当然这也和当时的社会环境有关，先是沉迷赌博，后来又抽上了福寿膏（大烟），把万贯家财败了个精光。</string>
    <string name="story_4">\u3000\u3000胡国华年轻的时候吃喝嫖赌抽五毒俱全，到最后穷得身上连一个大子儿都没有了。人要是犯了烟瘾，就抓心挠肝的无法忍受，但是没钱谁让你抽啊？昔日里有钱的时候，烟馆里的老板伙计见了他都是胡爷长，胡爷短的，招呼得殷勤周到，可是一但你身无分文了，他们就拿你当臭要饭的，连哄带赶，驱之不及。</string>
    <string name="story_5">\u3000\u3000人要穷疯了，廉耻道德这些观念就不重要了，胡国华想了个办法，去找舅舅骗点钱。胡国华的舅舅知道他是败家子大烟鬼，平时一文钱都不肯给他，但是这次胡国华骗舅舅说要娶媳妇，让舅舅给凑点钱。</string>
    <string name="story_6">\u3000\u3000舅舅一听感动得老泪纵横，这个不肖的外甥总算是办件正事，要是娶个贤惠的媳妇好好管管他，收收他的心，说不定日后就能学好了。</string>
    <string name="story_7">\u3000\u3000于是给他拿了二十块大洋，嘱咐他娶个媳妇好好过日子，千万别再沾染那些福寿膏了，过几天得空，还要亲自去胡国华家看看外甥媳妇。</string>
    <string name="story_8">\u3000\u3000胡国华鬼主意最多，为了应付舅舅，他回家之后到村里找了个扎纸人纸马的匠人，就是烧给死人的那种。这个扎纸师傅手艺很高明，只要手你说得出来的东西，他都能做的惟妙惟肖。</string>
    <string name="story_9">\u3000\u3000他按要求给胡国华扎了个白纸糊裱的纸女人，又用水彩给纸人画上了眉眼鼻子、衣服头发，在远处一看，嘿，真就跟个活人似的。</string>
    <string name="story_10">\u3000\u3000胡国华把纸人扛到家里，放在里屋的炕上，用被子把纸人盖了，心里想的挺好，等过几天舅舅来了，就推说我媳妇病了，躺在床上不能见客，让他远远的看一眼就行了。想到得意处，忍不住哼起了小曲，溜哒进城抽大烟去了。</string>
    <string name="story_11">\u3000\u3000没过几天，舅舅就上门了，买了一些花布点心之类的来看外甥媳妇，胡国华就按照预先想好的说词推脱，说媳妇身体不适，不能见客，让舅舅在们口揭开门帘看了一眼就把门帘放下来了。</string>
    <string name="story_12">\u3000\u3000舅舅不愿意了，噢，你小子就这么应付你亲娘舅啊？不行，今天必须得见见新媳妇，生病了我掏钱给新媳妇请郎中瞧病。</string>
    <string name="story_13">\u3000\u3000胡国华就死活拦着不让见，他越拦越显得有问题，舅舅更家疑心，两下里争执起来。正在此时，里屋门帘撩开了，出来一个女子，长得白白净净的，大脸盘子、大屁股小脚，胡国华心里咯噔一下，哎呦，这不就是我找人糊的纸人吗？它怎么活了？</string>
    <string name="story_14">\u3000\u3000女人对舅舅施了一礼说近日身体不好，刚才没出来迎接舅舅，失礼之处还请恕罪，现在突然又觉得身子大好了，今天就留舅舅在家吃顿便饭，说完就转身进去做饭。</string>
    <string name="story_15">\u3000\u3000胡国华的舅舅一看乐坏了，这外甥媳妇多贤惠，又生得旺夫的好相貌，我那死去的妹子泉下有知，看见他儿子娶了这么好的媳妇也得高兴啊。舅舅一高兴又给了胡国华十块大洋。</string>
    <string name="story_16">\u3000\u3000胡国华呆在当场，心里慌乱，也不知是该庆幸还是该害怕，时间过的很快，一转眼就到了晚上，白纸人做了一桌饭菜，舅舅乐得嘴都合不上了，但是胡国华却无心吃喝，他看着坐在自己对面的那个女人，就觉得心里跟吃了只苍蝇似的恶心。她的脸很白，一点血色没有，脸上的红润都是用胭脂抹上的。</string>
    <string name="story_17">\u3000\u3000舅舅老眼昏花，也没觉得那女人有什么不对头，七八杯老酒下肚就喝得伶仃大醉，胡国华借了辆驴车，把他送回家中。</string>
    <string name="story_18">\u3000\u3000回去的路上，越想越觉得害怕，干脆也不回家了，去城里的花柳巷中过了一夜，连抽带嫖把舅舅刚给的十个大洋都使光了。</string>
    <string name="story_19">\u3000\u3000最后又因为没钱付帐被赶了出来，无处可去，只能硬着头皮回家。到家一看屋里黑着灯，那个白纸人一动不动的躺在自己的床上，蒙着被子，之前的好象一切根本就没发生过。</string>
    <string name="story_20">\u3000\u3000胡国华一想留着她晚上再变成活人怎么办，不如我一把火烧了它干净。把白纸人抗到院子里，取出火摺子，就想动手烧了纸人，这时纸人忽然开口说话：“你个死没良心的，我好心好意帮你，却想烧了我！”</string>
    <string name="story_21">\u3000\u3000胡国华吓了一跳，深更半夜中只听那白纸糊的女人继续说：“我是看你可怜，你虽然吃喝嫖赌，但是心地还不算坏，我想嫁给你，你愿意吗？”</string>
    <string name="story_22">\u3000\u3000胡国华拼命的摇头，问那纸人你到底是妖还是鬼？白纸人说我当然是鬼，只是暂时附在这纸人身上，不过你个穷棒子还别嫌弃我，我生前很富有，陪葬的金银首饰够你抽十辈子大烟的，你岂不闻富死鬼强似穷命人百倍？</string>
    <string name="story_23">\u3000\u3000一提到钱胡国华就有些心动，因为最近实在太穷了，就连衣服都给当光了，不过他可不想有命取财无命花钱，他曾经听老人们讲起过女鬼勾汉子的事，一来二去就把男人的阳气吸光了，那些被鬼缠上的男人，最后都只剩下一副干皮包着的骨头架子。于是他对纸人说：“就算是你真心对我好，我也不能娶你，毕竟咱们是人鬼殊途，阴阳阻隔，这样做有违天道。”</string>
    <string name="story_24">\u3000\u3000白纸人说你既然如此铁石心肠，我也不勉强你，不过将来早晚有你后悔的那一天。你记住了，如果你的日子真到了穷得过不下去的时候，你就到十三里铺的荒坟来找我，在那片坟地的最中间有座没有墓碑的孤坟，里面的棺材就是我尸身所在，棺中有得是金银珠宝，只要你敢来，那些财物就尽管随意拿去花用。</string>
    <string name="story_25">\u3000\u3000说完，白纸人就一动不动了，胡国华壮着胆子，点了把火将白纸人烧成了灰烬。</string>
    <string name="story_26">\u3000\u3000后来有几次穷得实在没办法了，就想去十三里铺挖坟，但是到最后还是忍住了，东借西凑的把日子混了下来。两年以后他山穷水尽走投无路终于去了那片坟地，不过那是后话，咱们暂且不表。</string>
    <string name="story_27">\u3000\u3000这年的春节发生了很多事，胡国华扎个纸人骗他舅舅钱的事情终于败露了，舅舅生气上火，一病不起，没出三天就撒手归西了。</string>
    <string name="story_28">\u3000\u3000胡家的亲戚朋友都象防贼似的防着他，别说借给他钱了，就连剩饭都不让他蹭一口。胡国华把家中最后的一对檀木箱子卖了两块银洋，这箱子是他母亲的嫁妆，一直想留个念想，没舍得典当。但是烟瘾发做，也管不了那许多了，用这两块钱买了一小块福寿膏，赶回家中就迫不及待的点上烟泡倒在床上，猛吸了两口，身体轻飘飘的如在云端。</string>
    <string name="story_29">\u3000\u3000此刻他感觉自己快活似神仙，平日里那些被人瞧不起，辱骂，欺负的遭遇都不重要了。又吸了两口，忽然发现自己的破床上还趴着个黑呼呼的东西，定睛一看，原来床角上趴着一只大老鼠，这老鼠的岁数一定小不了，胡子都变白了，体型跟猫差不多大，它正在旁边吸着胡国华烟枪里冒出的烟雾，好象它也晓得这福寿膏的好处，嗅着鼻子贪婪的享受。</string>
    <string name="story_30">\u3000\u3000胡国华觉得有趣，对大老鼠说：“你这家伙也有烟瘾？看来跟我是同道中人。”说完自己抽了一口，用嘴向那老鼠喷云吐雾，老鼠好象知道他没有恶意，也不惧怕他，抬起头来接纳喷向它的烟雾。过了半晌，似乎是过足了瘾，缓缓的爬着离开。</string>
    <string name="story_31">\u3000\u3000如此数日，这只大老鼠每天都来同胡国华一起吸烟，胡国华到处被人轻贱，周围没有半个朋友，对这只老鼠惺惺相惜颇有好感，有时候老鼠来得晚一点，胡国华就忍着烟瘾等它。</string>
    <string name="story_32">\u3000\u3000但是好景不长，胡国华家里就剩下一张床和四面墙了，再也没有钱去买烟土，他愁闷无策，叹息的对老鼠说：“老鼠啊老鼠，今天我囊謦粮绝，可再没钱买福寿膏了，恐不能与你常吸此味。”言毕唏嘘不已。</string>
    <string name="story_33">\u3000\u3000老鼠听了他说话，双目炯炯闪烁，若有所思，反身离去。天黑的时候，老鼠叼回来一枚银元放在胡国华枕边，胡国华惊喜交加，连夜就进城买了一块福寿膏，回来后就灯下点烧了，大肆吞吐，和老鼠一起痛快淋漓的吸了个饱。</string>
    <string name="story_34">\u3000\u3000第二天老鼠又叼来三枚银元，胡国华乐得简直都不知道说什么好了，想起来以前念私塾时学的一个典故，就对老鼠说：“知管仲者，鲍书牙是也，君知我贫寒而厚施于我，真是我的知己啊，如不嫌弃，咱们就结为金兰兄弟。”从此与这只老鼠称兄道弟，呼其为”鼠兄”，饮食与共，一起抽大烟，还在床上给它用棉絮摆了个窝，让老鼠也睡在床上。</string>
    <string name="story_35">\u3000\u3000人鼠相安，不亚于莫逆之交，老鼠每天都出去叼回来银元，少则一二枚，多则三五枚，从此胡国华衣食无忧。多年以后我的祖父回忆起来，总说这段日子是他一生中最快乐的时光。</string>
    <string name="story_36">\u3000\u3000就这么过了多半年，胡国华渐渐富裕了起来，但是不是有那么句话吗？发财遇好友，倒霉碰小人，也该着胡国华是穷命，他就被一个小人给盯上了。</string>
    <string name="story_37">\u3000\u3000村里有个无赖叫王二杠子，他和胡国华不一样，胡国华至少曾经富裕过，怎么说也当过二十多年的”胡大少爷”。</string>
    <string name="story_38">\u3000\u3000王二杠子就没那么好的命了，从他家祖上八辈到他这代，都没穿过一条不露腚的裤子，他看胡国华家业败了，幸灾乐祸，有事没事的就对胡国华打骂侮辱，欺负欺负当年的胡大少爷，给自己心里找点平衡。</string>
    <string name="story_39">\u3000\u3000最近他觉得很奇怪，胡国华这穷小子也没做什么营生，家里能典当的都典当了，他家亲戚也死的差不多了，怎么天天在家抽大烟？他这买烟土的钱都是从哪来的？说不定这小子做了贼，我不如悄悄地盯着他，等他偷东西的时候抓了他扭送到官府，换几块大洋的赏钱也好。</string>
    <string name="story_40">\u3000\u3000可是盯了一段时间发现胡国华除了偶尔进城买些粮食和烟土之外，基本上是足不出户，也从不跟任何人来往。越是不知道他的钱是怎么来的，王二杠子就越是心痒。</string>
    <string name="story_41">\u3000\u3000有天胡国华出去买吃的东西，王二杠子趁机翻墙头进了他家，翻箱倒柜的想找找胡国华究竟有什么秘密。突然发现床上有只大老鼠正在睡觉，王二杠子顺手把老鼠抓起来扔到炉子上正在烧的一壶水里，然后把壶盖压上，心想等胡国华回家喝水，我在旁边看个乐子。</string>
    <string name="story_42">\u3000\u3000还没等王二杠子出去，胡国华就回来了，正好把他堵到屋里，胡国华一看壶里的大老鼠，已经给活活烫死了，顿时红了眼睛，抄起菜刀就砍，王二杠子被砍了十几刀，好在胡国华是个大烟鬼，手上无力，王二杠子虽然中了不少刀，却没受致命伤，他全身是血的逃到保安队求救，保安队的队长是当地一个军阀的亲戚，当时正在请这个军阀喝酒，队长一看这还了得？光天化日之下就持刀行凶，没有王法了吗？赶紧命几个手下把胡国华五花大绑的捆了来。</string>
    <string name="story_43">\u3000\u3000胡国华被押到堂前，保安队长厉声喝问，为何持刀行凶要杀王二杠子？</string>
    <string name="story_44">\u3000\u3000胡国华泪流满面，抽泣着述说了事情的始末，最后哀叹着说：“想我当初困苦欲死，没有这只老鼠我就活不到今日，不料我一时疏忽竟令鼠兄丧命，它虽非我所杀，却因我而死。九泉之下负此良友，情何以堪，我一人做事一人当，既然砍伤了王二杠子，该杀该罚都听凭发落，只求长官容我回家安葬了我的鼠兄，就是死也瞑目了。”</string>
    <string name="story_45">\u3000\u3000还没等保安队长发话，旁边那个军阀就感叹不已的对胡国华说道：“他奶奶的，不忘恩是仁，不负心是义，对老鼠尚且如此，何况对人呢？我念你仁义，又看你无依无靠，日后就随我从军做个副官吧。”</string>
    <string name="story_46">\u3000\u3000枪杆子就是政权，乱世之中，带兵的人说的话就是王法，军阀头子吩咐手下，把那个王二杠子用鞭子抽一顿给胡国华出气，又放了胡国华回家安葬老鼠，胡国华用木盒盛殓了老鼠的尸体，挖个坑埋了，哭了半日，就去投奔了那个军阀头子。</string>
    <string name="story_47">\u3000\u3000常言说得好：饿时吃糠甜如蜜，饱时吃蜜都不甜。人到了穷苦僚倒之时，别人就是给他一碗粥、一块饼也会感恩戴德，何况老鼠赠送给胡国华那么多的钱财，当然老鼠的钱也都是偷来的。圣人说渴死不饮盗泉之水，不过那是至圣至贤之人的品德标准，古人尚且难以做到，何况胡国华这样的庸人呢？以前听说在房中吸烟，时间久了屋内的苍蝇老鼠也会上瘾，此言非虚。</string>
</resources>
