<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F4EC"
    tools:context="com.shiguiyou.materialdemo.fragment.Tab2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_17"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_18"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_19"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_20"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_21"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_22"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_23"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_24"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_25"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_26"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_27"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_28"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_29"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_30"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_31"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_32"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_33"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_34"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_35"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_36"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_37"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
