<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F4EC"
    tools:context="com.shiguiyou.materialdemo.fragment.Tab2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_38"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_39"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_40"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_41"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_42"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_43"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_44"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_45"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_46"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/story_47"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="15sp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
